[package]
name = "beware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxc_allocator = "0.4.0"
oxc_ast = "0.4.0"
oxc_diagnostics = "0.4.0"
oxc_parser = "0.4.0"
oxc_semantic = "0.4.0"
oxc_span = "0.4.0"
